--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -387,7 +387,7 @@
 		
 			<h3 style="color:red">Q: What is the luckiest thing that has happened to you?</h3>
                         <h3 style="color:white">A: I'll asnwer this one with a quote by Richard Dawkins – 
-				<p>“We are going to die, 
+				<p style="color:white">“We are going to die, 
 				and that makes us the lucky ones. Most people are never going to die because they are never going 
 				to be born. The potential people who could have been here in my place but who will in fact never 
 				see the light of day outnumber the sand grains of Arabia. Certainly those unborn ghosts include 
@@ -416,7 +416,7 @@
 			<br>
 						
 			<h3 style="color:red">Q: What one thing do you really want but can’t afford?</h3>
-                        <h3 style="color:white">A:</h3>
+                        <h3 style="color:white">A: The aforementioned "Dream Car".</h3>
 			<br>
 						
 			<h3 style="color:red">Q: Where do you usually go when you when you have time off?</h3>
