--- a/aboutMe.html
+++ b/aboutMe.html
@@ -93,7 +93,7 @@
                         <ul>
                             <li><strong>Computer Science:</strong> C/C++, Java, Python, Terminal, JavaScript (p5), 
 				    Ionic3 (cross-platform framework), Angular, HTML (W3C), CSS and SCSS, XML, Android Studio, 
-				    Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp</li>
+				    Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp, Brackets</li>
                             <li><strong>Technologies:</strong> Android, iOS</li>
 			    <li><strong>Git</strong> (Github, Gitlab, and Bitbucket)</li>
                         </ul> 
