--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			
 			<h2>"The secret of happiness is: Find something more important than you are and dedicate your life to it."<br>—Daniel C. Dennett</h2>
 						
-			<h2 style="background-color:rgba(255, 215, 51, .6); color:white;">CONTACT: rgriff43@jhu.edu</h2>
+			<h2 style="color:rgba(255, 215, 51, .6)">CONTACT: rgriff43@jhu.edu</h2>
 			<br>
 			<center>
 				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:20%; color:white; background-color:rgb(255, 215, 51);">Subscribe</a>
