--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			<h2 style="color:rgba(255, 215, 51, .6)">CONTACT: rgriff43@jhu.edu</h2>
 			
 			<center>
-				<a href="http://eepurl.com/cVCLq1" class="button button-block button-rounded button-white button-large" style="height:50px; width:20%; color:white; background-color:rgb(255, 215, 51);">Subscribe</a>
+				<a href="http://eepurl.com/cVCLq1"  style="color:white">Subscribe</a>
 			</center>
 						
                     </header>
