--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <div>
             <img align="left" src="images/proj_imgs/p5js.png" class="pads" width="30%">
             <h2>JavaScript using p5 Processing</h2>
-            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This is one of my <strong>larger coding projects</strong>. 
+            <p style="color:white">This is one of my <strong>larger coding projects</strong>. 
 		    I've ran through a lot of online tutorials and such when I learned how to use p5, so I'm counting that as a sort of project 
 		    (all the programs I created during th learning process). Processing is a js project that using <strong>drawing tools</strong> 
 		    on an html canvas. Its most advanced applications is <strong>data visualization</strong> through <strong>algorithmic 
@@ -60,7 +60,7 @@
 	<div>
             <img align="left" src="images/proj_imgs/apl.jpg" class="pads" width="30%">
             <h2>synoPTsis</h2>
-	    <p style="background-color:rgba(255, 255, 255, .6); color:black;">synoPTsis is a <strong>Johns Hopkins</strong> University Applied Physics Lab 
+	    <p style="color:white">synoPTsis is a <strong>Johns Hopkins</strong> University Applied Physics Lab 
 		    <strong>startup</strong> that is working to streamline (through an android a iOS application) <strong>pateint data</strong> to allow 
 		    physicians to more efficiently treat patients at the <strong>Johns Hopkins Hospital</strong>. I have been working as a <strong>front-end
 		    developer</strong> at the company <strong>since June</strong> of <strong>2017</strong>. While my main duties consisted of building the 
@@ -80,7 +80,7 @@
         <div>
             <img align="left" src="images/proj_imgs/chess.png" class="pads" width="30%">
             <h2>Object Oriented Chess</h2>
-            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This was a group (of two) 
+            <p style="color:white">This was a group (of two) 
 		    <strong>final project</strong> for my Freshman <strong>Intermediate Programming</strong> 
 		    Course. It is written in Object Oriented <strong>C++</strong> without the assistance of 
 		    <strong>APIs</strong>. The game is playable in terminal and uses iostream graphics. The 
@@ -101,7 +101,7 @@
         <div>
             <img align="left" src="images/proj_imgs/lang.jpg" class="pads" width="30%">
             <h2>Language Modeling using Trigrams</h2>
-            <p style="background-color:rgba(255, 255, 255, .6); color:black;">This was a particularly 
+            <p style="color:white">This was a particularly 
 		    <strong>large assignment</strong> for a  <strong>programming</strong> course. It is
 		    written in <strong>C and C++</strong> (again without the help of any <strong>APIs</strong>.
 		    <strong>Users upload</strong> two plain text files, and the program parses everything into
@@ -124,7 +124,7 @@
 	<div>
             <img align="left" src="images/proj_imgs/crwl.png" class="pads" width="30%">
             <h2>Python Web Crawlers</h2>
-		<p style="background-color:rgba(255, 255, 255, .6); color:black;">Some of the <strong>most exciting</strong> things I did with programming (early 
+		<p style="color:white">Some of the <strong>most exciting</strong> things I did with programming (early 
 			on) was building <strong>web crawlers</strong>. Here are my favorites (using <strong>python 3</strong> and Beautiful Soup). 1) <strong>Internship.com</strong> 
 			Crawler: I built this in my first semester of freshman year. Internships seemed increasingly important for 
 			<strong>CS majors</strong>, especialy at Hopkins where people are so competetive. 
