--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<h2>"The secret of happiness is: Find something more important than you are and dedicate your life to it."<br>—Daniel C. Dennett</h2>
 			<br>
 			<ul class="icons">
-				<li><a href="https://www.facebook.com/profile.php?id=100012703299133" class="icon style2 fa fa-facebook-official" style="color:rgb(59,89,152)"><span class="label">Facebook</span></a><p>Facebook</p></li>
+				<li><a href="https://www.facebook.com/profile.php?id=100012703299133" class="icon style2 fa fa-facebook" style="color:white"><span class="label">Facebook</span></a><p>Facebook</p></li>
                            
 				<li><a href="https://twitter.com/reecewgriffith" class="icon style2 fa fa-twitter" style="color:rgb(0, 172, 237)"><span class="label">Twitter</span></a><p>Twitter</p></li>
                             
