--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -335,7 +335,7 @@
 			<br>
 		
 			<h3 style="color:red">Q: What fad or trend do you hope comes back?</h3>
-                        <h3 style="color:white">A: Fluorescent clothing from the 80s. I thik it'd 
+                        <h3 style="color:white">A: Fluorescent clothing from the 80s. I think it'd 
 				hilarious to see everyone walking around looking like they're in 
 				an 80s teen movie. Plus I have a decent amount of that stlye of clothing, 
 				because I go thrifting every so often.
@@ -403,8 +403,8 @@
                         <h3 style="color:white">A:</h3>
 			<br>
 						
-			<h3 style="color:red">Q: What are some things you’ve had to unlearn?</h3>
-                        <h3 style="color:white">A:</h3>
+			<h3 style="color:red">Q: What's something you’ve had to unlearn?</h3>
+                        <h3 style="color:white">A: Sleeping in late.</h3>
 			<br>
 						
 			<h3 style="color:red">Q: What are you looking forward to in the coming months?</h3>
