--- a/aboutMe.html
+++ b/aboutMe.html
@@ -57,7 +57,7 @@
 		</h3>
 		
 		<h3>  &emsp;&emsp;When I'm not working on the synoPTsis app, I work for the Coding School on their 
-			codeConnects project as a part-time web developer and instructor. (codeConnects is an online 
+			codeConnects project as a Web Developer. (codeConnects is an online 
 			platform that offers one-on-one computer science instruction and mentorship to underrepresented
 			middle and high school students. Pairing each student with a professional software engineer
 			or university student majoring in computer science, students participate in weekly,
