--- a/blogs/bl8.html
+++ b/blogs/bl8.html
@@ -127,7 +127,7 @@
 				or maybe go train hopping and just see where I end up. One of my old 
 				football coaches used to just drive in random directions every summer. 
 				I guess he got as far as the East Coast all the way from California a 
-				fe times. Doing that might be fun too.</h3>
+				few times. Doing that might be fun too.</h3>
 			<br>
 						
 			<h3 style="color:red">Q: If you had unlimited funds to build a house that you would live in for the rest of your life, what would the finished house be like?</h3>
@@ -299,7 +299,7 @@
 			<br>
 						
 			<h3 style="color:red">Q: What’s the best single day on the calendar?</h3>
-                        <h3 style="color:white">A: I want to say May 29th. It's the day I graduated 
+                        <h3 style="color:white">A: I want to say May 25th. It's the day I graduated 
 				high school. It was basically the transition from kid to adult in 
 				my life.</h3>
 			<br>
