--- a/blogs/bl7.html
+++ b/blogs/bl7.html
@@ -53,9 +53,16 @@
 				be okay with us/safe. He ended up going chest deep in the water, which for him is about eight inches. We 
 				stayed for 4 hours, but any dog will be tired after two or three. If you pack a lunch, get there early 
 				for cheap and nearby parking, you can out of this trip for just the price of gas plus less than ten dollars 
-				for parking. 5/5 stars. If you have a dog, this is definitely something to try.
+				for parking. 5/5 stars. If you have a dog, this is definitely something to try. It's best to go when it's 
+				overcast. Your pet might get too hot otherwise. 
 			</h3>
 						
+			<h3 align="left">
+				Here is a <a href="http://www.dogbeach.org" style="color:rgba(255, 215, 51, .6)">link </a>
+				to their website with some helpful tips for first time visitors. They're also looking for volunteers, 
+				that is — if you like spending your summers with dogs on the beach (but who doesn't, right?)
+			</h3>
+			
 			<br>
 						
                 <h3 align="left" style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">        
