--- a/blogs/bl5.html
+++ b/blogs/bl5.html
@@ -62,6 +62,16 @@
 				shooting for the West Coast. Most of my family is there, and it's just something I'm 
 				used to as a Californian. <strong>Seattle</strong> or <strong>San Fran</strong> for me!
 		</h3>
+						
+		<h3 align="left">
+			&emsp;&emsp;As an added bonus, here is a review I wrote for the best restaraunt we visited on the trip: 
+			Max Brenner's New York - I really enjoyed my experience at this restaurant. It gets an 10/10 across the board.
+			Everything about this place was just perfect. Their hot chocolates are a must for any new visitor. I had something 
+			from their breakfast menu, which was fantastic. Every order comes with buttered french bread and a side of 
+			melted chocolate. It's also the home of the famous American chef David Burke, so it's definitely something to try 
+			if you're in the city. Prices were high, about $30 a person, but this was made up for with large portions and great food.
+
+		</h3>
 			<br>
 								
                 <h3 align="left" style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">        
