--- a/blogs/bl2.html
+++ b/blogs/bl2.html
@@ -28,7 +28,7 @@
 	    		</ul>
 	    	</center>
 						
-                        <h3 align="left"> <img src="../images/hhackssp17.jpg" align="right" alt="" height="50%" width="50%" style="padding:20px;"/>
+                        <h3 align="left"> <img src="../images/hhackssp17.jpg" align="right" alt="" height="50%" width="50%" style="padding:20px; min-width: 250px;"/>
                             
                             2017 February,
 						</h3>
