--- a/blogs/bl4.html
+++ b/blogs/bl4.html
@@ -27,7 +27,7 @@
 	    		</ul>
 	    	</center>
                         
-                        <h3 align="left"> <img src="../images/ggames.jpg" align="right" alt="" height="50%" width="50%" style="padding:20px;"/> 
+                        <h3 align="left"> <img src="../images/ggames.jpg" align="right" alt="" height="50%" width="50%" style="min-width: 250px; padding:20px;"/> 
                         
                             2017 April,
 						</h3>
