little life blog fix

--- a/blogs/bl9.html
+++ b/blogs/bl9.html
@@ -32,7 +32,7 @@
             </h3>
                                    
             <h3 align="left">
-				&emsp;&emsp;After reading this book, I went to goodreads.com to see if I was the only one that had such a taxing experience reading this book. I found a review that summarized my general feeling. (I do not 100% agree with this review, but the general idea in mind was well put.)
+				&emsp;&emsp;After reading this book, I went to goodreads.com to see if I was the only one that had such a taxing experience with it. I found a review that summarized my general feeling. (I do not 100% agree with this review, but the general idea in mind was well put.)
 			</h3>
                         
             <br>
