blog header titles for tabs

--- a/blogs/bl10.html
+++ b/blogs/bl10.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Reece W. Griffith | Post #10</title>
+		<title>My First Graphic Novel.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -28,7 +28,7 @@
 	    	</center>
                         
             <h3 align="left">  
-            	2017 July,
+            	2017 August,
             </h3>
                                    
             <h3 align="left" ><img src="../images/winter.jpg" align="right" alt="" width="30%" style="min-width: 250px; padding:20px;"/>
