--- a/blogs/bl1.html
+++ b/blogs/bl1.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Reece W. Griffith | Post #1</title>
+		<title>My Adventure With Writing.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
