--- a/blogs/bl3.html
+++ b/blogs/bl3.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Reece W. Griffith | Post #4</title>
+		<title>Making Art with JavaScript  Processing (p5).</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
