--- a/blogs/bl5.html
+++ b/blogs/bl5.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Reece W. Griffith | Post #3</title>
+		<title>The New York City Trip.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -63,7 +63,8 @@
 				used to as a Californian. <strong>Seattle</strong> or <strong>San Fran</strong> for me!
 		</h3>
 						
-		<h3 align="left">
+                        
+		<h3 align="left"><img src="../images/maxb.jpg" align="left" width="30%" style="min-width: 150px; padding:20px">
 			&emsp;&emsp;As an added bonus, here is a review I wrote for the best restaraunt we visited on the trip: 
 			Max Brenner's New York - I really enjoyed my experience at this restaurant. It gets an 10/10 across the board.
 			Everything about this place was just perfect. Their hot chocolates are a must for any new visitor. I had something 
