--- a/aboutMe.html
+++ b/aboutMe.html
@@ -92,10 +92,10 @@
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
                             <li><strong>Computer Science:</strong> C/C++, Java, Python, Terminal, JavaScript (p5), 
-				    Ionic3 (cross-platform framework), Angular, HTML (W3C), CSS and SCSS, XML, Android Studio, 
-				    Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp, Brackets</li>
+				                Ionic3 (cross-platform framework), Angular, HTML (W3C), CSS and SCSS, XML, Android Studio, 
+				                Eclipse (IDE), Xcode (IDE), Firebase, Google Protobuf, MongoDB, Mailchimp, Brackets, Trello</li>
                             <li><strong>Technologies:</strong> Android, iOS</li>
-			    <li><strong>Git</strong> (Github, Gitlab, and Bitbucket)</li>
+			                <li><strong>Git</strong> (Github, Gitlab, and Bitbucket)</li>
                         </ul> 
                     </h3>
                 </div>
@@ -115,8 +115,8 @@
                             <li>Leadership and Public Speaking</li>
                             <li>Professional Writing/Communication</li>
                             <li>Social Psychology</li>
-			    <li>Teaching Experience</li>
-		      	    <li>Community Outreach</li>
+			                <li>Teaching Experience</li>
+		      	            <li>Community Outreach</li>
                         </ul>
                     </h3>
                 </div>
