--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
     <section class="thumbnails">
     
     <div>
-            <a href="">
+            <!--<a href="">
                 <img src="images/it.gif" alt="" />
                 <h3 style="color:rgb(255, 215, 51)">Stephen King's It<br>(Blog Post Coming Soon...)</h3>
                 <span style="color:rgba(255, 255, 255, .6); padding:0">
@@ -63,6 +63,19 @@
                 </span>
                 <span style="color:gold">
                     <i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;NEW
+                </span>
+            </a>-->
+            <a href="blogs/bl11.html">
+                <img src="images/musk.jpg" alt="" />
+		        <h3 style="color:rgb(255, 215, 51)">Elon Musk at TED 2017</h3>
+                <span style="color:rgba(255, 255, 255, .6); padding:0">
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;TED
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Tesla
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;SpaceX
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Solar City
                 </span>
             </a>
             <a href="blogs/bl8.html">
