--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 	</head>
 
     <header id="header">					
-        <h1>The <strong>Work</strong>.</h1>
+        <h1>My <strong>Work</strong>.</h1>
     </header>
 	
 	
