larger musk pic

--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,7 @@
                 </span>
             </a>-->
             <a href="blogs/bl11.html">
-                <img src="images/musk.jpg" alt="" />
+                <img src="images/mosk.jpg" alt="" />
 		        <h3 style="color:rgb(255, 215, 51)">Elon Musk at TED 2017</h3>
                 <span style="color:rgba(255, 255, 255, .6); padding:0">
                     <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;TED
