--- a/aboutMe.html
+++ b/aboutMe.html
@@ -78,7 +78,7 @@
 		</h3>
 		<br>
                 
-            <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf" class="button button-block button-rounded button-white button-large" style="height:50px; width:100%; color:black; background-color:rgb(255, 215, 51);"><i class="fa fa-file-text-o"></i> Résumé</a>
+            <button class="baseBut"><a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf"><i class="fa fa-file-text-o"></i> Résumé</a></button>
             <br>
             <br>
             <h2>My <strong>Expertise</strong></h2>
