--- a/blog.html
+++ b/blog.html
@@ -206,7 +206,7 @@
         -->
         <br>
 		<center>
-            		<a href="#" class="button button-block button-rounded button-white button-large" style="height:50px; width:50%; color:white; background-color:rgb(255, 215, 51);"><i class="fa fa-hand-pointer-o"></i> Back to Top</a>
+            		<button class="baseBut"><a href="#"><i class="fa fa-hand-pointer-o"></i></a> Back to Top</button>
 		</center>
 		<br>
 		
