--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<p>Last Update: 2017 July</p>
-						<p>Reece W. Griffith</p>
+						<p>by Reece W. Griffith</p>
 				</footer>
 
 			</div>
