--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 				
 				<!-- Footer -->
 					<footer id="footer">
-						<p>Last Update: 2017 July</p>
-						<p>by Reece W. Griffith</p>
+						<span>Last Update: 2017 July</span>
+						<span>by Reece W. Griffith</span>
 				</footer>
 
 			</div>
