--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<span>Share this Site</span>
 			<div display="inline-block">
 				<a class="twitter-share-button" 
-				   href="https://twitter.com/intent/tweet?text=Check%out%20this%20great%20website!%20http://reecewgriffith.com%20">
+				   href="https://twitter.com/intent/tweet?text=Check%out%20this%20great%20website!%20http://reecewgriffith.com">
 				    <i class="fa fa-twitter" aria-hidden="true"></i></a>
 				&nbsp;
 				&nbsp;
