--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<center>
 			<span>Share this Site</span>
 			<div display="inline-block">
-				<a class="twitter-share-button" 
+				<a class="twitter-share-button" target="_blank"
 				   href="https://twitter.com/intent/tweet?text=Check%20out%20this%20great%20website!%20http://reecewgriffith.com">
 				    <i class="fa fa-twitter" aria-hidden="true"></i></a>
 				&nbsp;
