--- a/blogs/bl3.html
+++ b/blogs/bl3.html
@@ -24,7 +24,7 @@
                         
             <span>Share this Post</span>
                 <div display="inline-block">
-                        <a class="twitter-share-button" 
+                        <a class="twitter-share-button" target="_blank"
                            href="https://twitter.com/intent/tweet?text=Just%20read%20a%20great%20post%20at%20http://reecewgriffith.com/blogs/bl3.html%20">
                             <i class="fa fa-twitter" aria-hidden="true"></i></a>
                         &nbsp;
