--- a/blog.html
+++ b/blog.html
@@ -154,6 +154,20 @@
 
         
     <div>
+        <a href="blogs/bl12.html">
+                <img src="images/bma.jpg" alt="" />
+				<h3 style="color:rgb(255, 215, 51)">The Baltimore Museum of Art</h3>
+                <span style="color:rgba(255, 255, 255, .6); padding:0">
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Museum
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Art
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Baltimore
+                </span>
+                <span style="color:gold">
+                    <br><i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;New
+                </span>
+        </a>
         <a href="blogs/bl9.html">
                 <img src="images/litlife.jpg" alt="" />
 				<h3 style="color:rgb(255, 215, 51)">The Worst Book I Have Ever Read</h3>
