it coming soon changed to tag

--- a/blog.html
+++ b/blog.html
@@ -65,7 +65,7 @@
                 <span style="color:gold">
                     <br><i color="red" class="fa fa-wrench" aria-hidden="true"></i>&nbsp;Coming Soon
                 </span>
-            </a>   
+            </a>
             <a href="blogs/bl11.html">
                 <img src="images/mosk.jpg" alt="" />
 		        <h3 style="color:rgb(255, 215, 51)">Elon Musk at TED 2017</h3>
@@ -111,7 +111,7 @@
         <div>
             <a href="">
                 <img src="images/it.gif" alt="" />
-                <h3 style="color:rgb(255, 215, 51)">Stephen King's It<br>(Blog Post Coming Soon...)</h3>
+                <h3 style="color:rgb(255, 215, 51)">Stephen King's It</h3>
                 <span style="color:rgba(255, 255, 255, .6); padding:0">
                     <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Book Review
                     &nbsp;&nbsp;&nbsp;&nbsp;
