nyc blog formatting

--- a/blogs/bl5.html
+++ b/blogs/bl5.html
@@ -80,8 +80,9 @@
 				used to as a Californian. <strong>Seattle</strong> or <strong>San Fran</strong> for me!
 		</h3>
 						
-               <h2 align="left">The Food</h2>         
-		<h3 align="left"><img src="../images/maxb.jpg" align="left" width="30%" style="min-width: 250px; padding:20px">
+               <h2 align="left">The Food<img src="../images/maxb.jpg" align="left" width="30%" style="min-width: 250px; padding:20px"></h2>      
+                        
+		<h3 align="left">
 			&emsp;&emsp;As an added bonus, here is a review I wrote for the best restaraunt we visited on the trip: 
 			Max Brenner's New York - I really enjoyed my experience at this restaurant. It gets an 10/10 across the board.
 			Everything about this place was just perfect. Their hot chocolates are a must for any new visitor. I had something 
@@ -92,6 +93,8 @@
 		</h3>
 			
             <br>         
+            <br>
+                        <br>
                         <center>
 			<ul class="icons">
 				<li><a href="../blog.html" class="icon style2 fa fa-pencil" style="color:rgb(255, 215, 51)"><span class="label">Back to All Posts</span></a><p>Back to All Posts</p></li>
