button styling fix

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -78,7 +78,7 @@
 		</h3>
 		<br>
                 
-            <button class="baseBut"><a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf"><i class="fa fa-file-text-o"></i> Résumé</a></button>
+            <button class="bar"><a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf"><i class="fa fa-file-text-o"></i> Résumé</a></button>
             <br>
             <br>
             <h2>My <strong>Expertise</strong></h2>
