--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
+        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	</head>
 	<body>
 
@@ -42,10 +43,10 @@
 			
         <br>
             
-				<button class="baseBut"><a href="http://eepurl.com/cVCLq1"  style="color:white">&nbsp;Subscribe&nbsp;</a></button>
+				<button><a href="http://eepurl.com/cVCLq1"><i class="fa fa-smile-o"></i>&nbsp;Subscribe</a></button>
                 <br><br>
 				<form method="post" action="mailto:rgriff43@jhu.edu" >
-                    <button class="baseBut">&nbsp;Contact&nbsp;</button> 
+                    <button><i class="fa fa-envelope-o"></i>&nbsp;Contact</button> 
                 </form>
             
         <br>
