--- a/aboutMe.html
+++ b/aboutMe.html
@@ -81,6 +81,9 @@
             <button class="bar"><a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf"><i class="fa fa-file-text-o"></i> Résumé</a></button>
             <br>
             <br>
+            <button class="bar"><a target="_blank" href="https://www.slideshare.net/slideshow/embed_code/key/4TyGN4aI67qpeq"><i class="fa fa-file-text-o"></i> Letter of Recommendation</a></button>
+            <br>
+            <br>
             <h2>My <strong>Expertise</strong></h2>
             
             <section class="thumbnails">
