added watchmen as pending

--- a/blog.html
+++ b/blog.html
@@ -80,20 +80,7 @@
             <br><i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;New
             </span>
             </a>
-            <!--<a href="#">
-            <img src="images/watchmenPaperback.jpg" alt=""/>
-            <h3 style="color:rgb(255, 215, 51)">Watchmen</h3>
-            <span style="color:rgba(255, 255, 255, .6); padding:0">
-            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Comic Book
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;DC
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Alan Moore
-            </span>
-            <span style="color:gold">
-            <br><i color="red" class="fa fa-wrench" aria-hidden="true"></i>&nbsp;Coming Soon
-            </span>
-            </a>-->
+            
             <a href="blogs/bl11.html">
             <img src="images/mosk.jpg" alt="" />
             <h3 style="color:rgb(255, 215, 51)">Elon Musk at TED 2017</h3>
@@ -197,7 +184,20 @@
 
 
             <div>
-            
+            <a href="#">
+            <img src="images/watchmenPaperback.jpg" alt=""/>
+            <h3 style="color:rgb(255, 215, 51)">Who Watches the Watchmen</h3>
+            <span style="color:rgba(255, 255, 255, .6); padding:0">
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Comic Book
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;DC
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Alan Moore
+            </span>
+            <span style="color:gold">
+            <br><i color="red" class="fa fa-wrench" aria-hidden="true"></i>&nbsp;Coming Soon
+            </span>
+            </a>
             <a href="blogs/bl9.html">
             <img src="images/litlife.jpg" alt="" />
             <h3 style="color:rgb(255, 215, 51)">The Worst Book I Have Ever Read</h3>
