--- a/blogs/bl14.html
+++ b/blogs/bl14.html
@@ -39,12 +39,16 @@
 
             <br>
 
-            <h3 align="left"> <img src="../images/dragonduolingo.jpg" align="right" alt="" width="50%" style="min-width: 250px; padding:20px;"/> 
+            <h3 align="left"> <img src="../images/watchmen.jpg" align="right" alt="" width="33%" style="min-width: 50px; padding:20px;"/> 
                 2017 August,
             </h3>
 
             <h3 align="left">
-                &emsp;&emsp;Watchmen is a Graphic Novel created by Alan Moore. He is also the creator of the popular sandman comics, as well as the Killing Joke series of Batman. While the novels colors and art style may feel a bit "dated", this is made up for by the excellent plot and charater development throughout the novel.
+                &emsp;&emsp;This Hugo Award-winning graphic novel chronicles the fall from grace of a group of super-heroes plagued by all-too-human failings. Along the way, the concept of the super-hero is dissected as the heroes are stalked by an unknown assassin.
+
+            <h3 align="left">
+                &emsp;&emsp;One of the most influential graphic novels of all time and a perennial best-seller, Watchmen has been studied on college campuses across the nation and is considered a gateway title, leading readers to other graphic novels such as V for Vendetta, Batman: The Dark Knight Returns and The Sandman series.
+            
             </h3>
 
 
