--- a/aboutMe.html
+++ b/aboutMe.html
@@ -115,7 +115,7 @@
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
-                            <li><strong>Spoken Languages:</strong> English (native speaker), Spanish (functional), Russian (functional)</li>
+                            <li><strong>Spoken Languages:</strong> English (native speaker), Spanish (functional), Russian (functional, German (functional), High Valyrian (functional)</li>
                             <li>Marketing</li>
                             <li>Business Analysis</li>
                             <li>3D Printing Technology</li>
