--- a/blog_ent.html
+++ b/blog_ent.html
@@ -105,7 +105,20 @@
 
 
             <div>
-            
+            <a href="#">
+            <img src="images/watchmenPaperback.jpg" alt=""/>
+            <h3 style="color:rgb(255, 215, 51)">Who Watches the Watchmen</h3>
+            <span style="color:rgba(255, 255, 255, .6); padding:0">
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Comic Book
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;DC
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Alan Moore
+            </span>
+            <span style="color:gold">
+            <br><i color="red" class="fa fa-wrench" aria-hidden="true"></i>&nbsp;Coming Soon
+            </span>
+            </a>
                 
             <a href="blogs/bl9.html">
             <img src="images/litlife.jpg" alt="" />
