--- a/blog_trav.html
+++ b/blog_trav.html
@@ -65,6 +65,20 @@
             <section class="thumbnails">
 
             <div>
+             <!--   
+            <a href="blogs/bl16.html">
+            <img src="images/moose.jpg" alt="" />
+            <h3 style="color:rgb(255, 215, 51)">The Canada Trip</h3>
+            <span style="color:rgba(255, 255, 255, .6); padding:0">
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Travel
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;North America
+            </span>
+            <span style="color:gold">
+            <br><i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;New
+            </span>
+            </a> 
+            -->
                 <a href="blogs/bl12.html">
                 <img src="images/bma.jpg" alt="" />
                 <h3 style="color:rgb(255, 215, 51)">The Baltimore Museum of Art</h3>
@@ -84,6 +98,20 @@
 
 
             <div>
+                <!--
+                <a href="blogs/bl17.html">
+            <img src="images/dc.jpg" alt="" />
+            <h3 style="color:rgb(255, 215, 51)">Doing DC.</h3>
+            <span style="color:rgba(255, 255, 255, .6); padding:0">
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;US Capitol
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Travel
+            </span>
+            <span style="color:gold">
+            <br><i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;New
+            </span>
+            </a>   
+            -->
             
                 <a href="blogs/bl7.html">
                 <img src="images/hbeach.gif" alt="" />
