--- a/blogs/bl16.html
+++ b/blogs/bl16.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Who Watches the Watchmen.</title>
+		<title>The Canada Trip.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -18,43 +18,34 @@
         <!-- Header -->
         <header id="header">
 
-            <h1>Who Watches the <strong>Watchmen</strong>.</h1>
+            <h1>The <strong>Canada</strong> Trip.</h1>
 
             <span>Share this Post</span>
             <div display="inline-block">
                 <a class="twitter-share-button" target="_blank"
-                    href="https://twitter.com/intent/tweet?text=Just%20read%20a%20great%20post%20at%20http://reecewgriffith.com/blogs/bl14.html%20">
+                    href="https://twitter.com/intent/tweet?text=Just%20read%20a%20great%20post%20at%20http://reecewgriffith.com/blogs/bl16.html%20">
                     <i class="fa fa-twitter" aria-hidden="true"></i></a>
                 &nbsp;
                 &nbsp;
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://reecewgriffith.com/blogs/bl14.html" target="_blank">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://reecewgriffith.com/blogs/bl16.html" target="_blank">
                     <i class="fa fa-facebook-square" aria-hidden="true"></i>
                 </a>
                 &nbsp;
                 &nbsp;
-                <a href="http://www.linkedin.com/shareArticle?mini=true&url=http://reecewgriffith.com/blogs/bl14.html" target="_blank">
+                <a href="http://www.linkedin.com/shareArticle?mini=true&url=http://reecewgriffith.com/blogs/bl16.html" target="_blank">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
             </div> 
 
             <br>
 
-            <h3 align="left"> <img src="../images/watchmen.jpg" align="right" alt="" width="33%" style="min-width: 50px; padding:20px;"/> 
+            <h3 align="left"> <img src="../images/dragonduolingo.jpg" align="right" alt="" width="50%" style="min-width: 250px; padding:20px;"/> 
                 2017 August,
             </h3>
 
             <h3 align="left">
-                &emsp;&emsp;This Hugo Award-winning graphic novel chronicles the fall from grace of a group of super-heroes plagued by all-too-human failings. Along the way, the concept of the super-hero is dissected as the heroes are stalked by an unknown assassin.
-
-            <h3 align="left">
-                &emsp;&emsp;One of the most influential graphic novels of all time and a perennial best-seller, Watchmen has been studied on college campuses across the nation and is considered a gateway title, leading readers to other graphic novels such as V for Vendetta, Batman: The Dark Knight Returns and The Sandman series.
-            
+                &emsp;&emsp;FILLER filler Filler
             </h3>
-
-
-            <h3 align="left">&emsp;&emsp;Apocalyptic 1980s America... Masked vigilantes have been banned by the government, Russia and the US strulggle for power. Many of the current, government sponsored heroes, are being slandered or even killed. Heroes of the past must come together to find out why and stop the world from being launched into another war.</h3>
-                
-            <h3 align="left">&emsp;&emsp;I had a really good time reading this. This was my first actualy comic book, and I've only read one other graphic novel before this (<a style="color:gold" href="blogs/bl10.html">Bone by Jeff Smith</a>). It was a really fun read, the art style obviously has that vintage feel since this is from the 80s, but the overall work makes up for it. The story is engaging and th characters even more so. Watchmen is a great starter for anyone's comic book journey. 5/5 stars.</h3>
 
 
             <br>    
