made watchmen article clickable

--- a/blog.html
+++ b/blog.html
@@ -206,7 +206,7 @@
 
 
             <div>
-            <a href="#">
+            <a href="blogs/bl14.html">
             <img src="images/watchmenPaperback.jpg" alt=""/>
             <h3 style="color:rgb(255, 215, 51)">Who Watches the Watchmen</h3>
             <span style="color:rgba(255, 255, 255, .6); padding:0">
