--- a/blog_trav.html
+++ b/blog_trav.html
@@ -66,7 +66,7 @@
 
             <div>
              
-            <a href="blogs/bl16.html">
+            <a href="#">
             <img src="images/moose.jpg" alt="" />
             <h3 style="color:rgb(255, 215, 51)">The Canada Trip</h3>
             <span style="color:rgba(255, 255, 255, .6); padding:0">
@@ -97,7 +97,7 @@
 
             <div>
             
-            <a href="blogs/bl17.html">
+            <a href="#">
             <img src="images/dc.jpg" alt="" />
             <h3 style="color:rgb(255, 215, 51)">Doing DC.</h3>
             <span style="color:rgba(255, 255, 255, .6); padding:0">
