--- a/blogs/bl17.html
+++ b/blogs/bl17.html
@@ -44,7 +44,7 @@
             </h3>
 
             <h3 align="left">
-                &emsp;&emsp;FILLER filler Filler
+                &emsp;&emsp;    
             </h3>
 
 
