--- a/aboutMe.html
+++ b/aboutMe.html
@@ -80,9 +80,12 @@
             <br>
 
             <center>
-            <button style="width: 100%"><a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf">
-                <i class="fa fa-file-text-o"></i>Résumé</a>
-            </button>
+            <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf">
+            <button class="button button1">
+                <i class="fa fa-file-text-o"></i>Résumé
+            </button> 
+            </a>
+            
             <br>
             <br>
             </center>
