--- a/aboutMe.html
+++ b/aboutMe.html
@@ -94,7 +94,7 @@
             <section class="thumbnails">
 
                 <div>
-                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px;">
+                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px; font-weight:900">
                         <i class="fa fa-file-desktop"></i>IN THE MACHINE
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
@@ -111,10 +111,10 @@
                 <br>
 
                 <div>
-                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px;">
+                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px; font-weight:900">
                         <i class="fa fa-file-globe"></i>IN THE REAL WORLD
                     </h3>
-                    <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
+                    <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px; font-weight:900">
                         <ul>
                             <li><strong>Spoken Languages:</strong> English (native speaker), Spanish (functional), Russian (functional, German (functional), High Valyrian (functional)</li>
                             <li>Marketing</li>
@@ -132,12 +132,13 @@
                 <br>
 
                 <div>
-                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px;">
+                    <h3 style="background-color:rgba(255, 255, 255, .6); color:rgb(255, 215, 51); padding:20px; font-weight:900">
                         <i class="fa fa-file-trophy"></i>AWARDS
                     </h3>
                     <h3 style="background-color:rgba(255, 215, 51, .6); color:white; padding:20px;">
                         <ul>
                             <li>Top Ten: Wash. D.C. Google Games 2017</li>
+                            <li>HopHacks Finalist (Top Ten), Fall 2017</li>
                         </ul>
                     </h3>
                 </div>
