--- a/aboutMe.html
+++ b/aboutMe.html
@@ -66,14 +66,12 @@
             </h3>
 
             <h3> 
-                &emsp;&emsp;I got my start in computer science by making programs that made
-                high school life easier (ie homework tools, websites, ect.). My experience
-                has led me to be a competetive <strong>Computer Science</strong> major at Johns Hopkins.
+                &emsp;&emsp;I sort of fell into computer science. In high school, I was interested in so many different fields of science and research that I had a difficult time landing on a major. The one underlyind aspect of each field was Computer Science. It touches everything in STEM and even things like art and animation. Computer Science allows me to contribute to a wide array of subjects while still honing skills in one particular area. It is a bridge between many, if not every, field(s) of study. 
             </h3>
 
             <h3>
                 &emsp;&emsp;I'm a maker, a tinkerer, and a hacker. I've traveled to several hackathons
-                and coding competitions and worked on a bunch of projects, from mobile apps
+                and coding competitions and worked on a bunch of projects, from cross-platform mobile apps
                 to art created with algorithmic programming in JavaScript. I firmly believe
                 in <strong>learning by doing</strong> and taking education into your own hands.
             </h3>
