--- a/blogs/bl17.html
+++ b/blogs/bl17.html
@@ -18,7 +18,7 @@
         <!-- Header -->
         <header id="header">
 
-            <h1>Doing <strong>DC</strong>.</h1>
+            <h1>The <strong>Canada</strong> Trip.</h1>
 
             <span>Share this Post</span>
             <div display="inline-block">
