--- a/blogs/bl17.html
+++ b/blogs/bl17.html
@@ -39,14 +39,42 @@
 
             <br>
 
-            <h3 align="left"> <img src="../images/dragonduolingo.jpg" align="right" alt="" width="50%" style="min-width: 250px; padding:20px;"/> 
+            <h3 align="left"> 
                 2017 August,
             </h3>
 
             <h3 align="left">
-                &emsp;&emsp;    
+                &emsp;&emsp;I find it hard to write about travel. Pictures always explain it better, so here are a handful from the trip.
             </h3>
-
+            
+            <img src="../images/can/IMG_0401 copy.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0409.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0411.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0412.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0428.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0433.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0442.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0445.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0462.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0474.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0490.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0500.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0539.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0556.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0559.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0561.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0563.JPG" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0566.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0567.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0570.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0577.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0601.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0635.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0730.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0792.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0830.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0833.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/can/IMG_0857.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
 
             <br>    
             
