--- a/blogs/bl18.html
+++ b/blogs/bl18.html
@@ -39,13 +39,25 @@
 
             <br>
 
-            <h3 align="left"> <img src="../images/dragonduolingo.jpg" align="right" alt="" width="50%" style="min-width: 250px; padding:20px;"/> 
+            <h3 align="left"> 
                 2017 August,
             </h3>
 
             <h3 align="left">
-                &emsp;&emsp;    
+                &emsp;&emsp;I find it hard to write about travel. Pictures always explain it better, so here are a handful from the trip.
             </h3>
+
+            <img src="../images/dc/jeff.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/sol.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/cal.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/yee.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/us.png" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/dup.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/yee2 copy.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/mlk.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/pan.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            <img src="../images/dc/diam.jpg" alt="" width="50%" style="min-width: 250px; padding:20px;"/>
+            
 
 
             <br>    
