--- a/blog_misc.html
+++ b/blog_misc.html
@@ -66,7 +66,7 @@
 
             <div>
                 <a href="blogs/bl19.html">
-                    <img src="images/nye" alt=""/>
+                    <img src="images/nye.jpg" alt=""/>
                     <h3 style="color:rgb(255, 215, 51)">New Year's Eve 2018 and Resolutions</h3>
                     <span style="color:rgba(255, 255, 255, .6); padding:0">
                     <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Holiday
