--- a/blog_ent.html
+++ b/blog_ent.html
@@ -85,6 +85,21 @@
 
 
             <div>
+
+                <a href="blogs/bl20.html">
+                    <img src="images/gr.png" alt=""/>
+                    <h3 style="color:rgb(255, 215, 51)">Books on a Budget</h3>
+                    <span style="color:rgba(255, 255, 255, .6); padding:0">
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Books
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Apps
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Money
+                    </span>
+                    <span style="color:gold">
+                    <br><i color="red" class="fa fa-search" aria-hidden="true"></i>&nbsp;Coming Soon
+                    </span>
+                </a>
             
             <a href="blogs/bl10.html">
             <img src="images/bone.jpg" alt="" />
@@ -111,9 +126,6 @@
             <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;DC
             &nbsp;&nbsp;&nbsp;&nbsp;
             <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Alan Moore
-            </span>
-            <span style="color:gold">
-            <br><i color="red" class="fa fa-star" aria-hidden="true"></i>&nbsp;New
             </span>
             </a>
                 
