--- a/blog.html
+++ b/blog.html
@@ -66,6 +66,21 @@
             <section class="thumbnails">
             
             <div>
+
+                <a href="blogs/bl20.html">
+                    <img src="images/gr.png" alt=""/>
+                    <h3 style="color:rgb(255, 215, 51)">Books on a Budget</h3>
+                    <span style="color:rgba(255, 255, 255, .6); padding:0">
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Books
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Apps
+                    &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Money
+                    </span>
+                    <span style="color:gold">
+                    <br><i color="red" class="fa fa-search" aria-hidden="true"></i>&nbsp;Coming Soon
+                    </span>
+                </a>
             
             <a href="blogs/bl17.html">
             <img src="images/moose.jpg" alt="" />
