--- a/blog_ent.html
+++ b/blog_ent.html
@@ -87,7 +87,7 @@
             <div>
 
                 <a href="blogs/bl20.html">
-                    <img src="images/gr.png" alt=""/>
+                    <img src="images/bookmoney.jpg" alt=""/>
                     <h3 style="color:rgb(255, 215, 51)">Books on a Budget</h3>
                     <span style="color:rgba(255, 255, 255, .6); padding:0">
                     <i class="fa fa-tag" aria-hidden="true"></i>&nbsp;Books
