--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
             
             <div>
 
-                <a href="blogs/bl20.html">
+                <a href="#">
                     <img src="images/bookmoney.jpg" alt=""/>
                     <h3 style="color:rgb(255, 215, 51)">Books on a Budget</h3>
                     <span style="color:rgba(255, 255, 255, .6); padding:0">
@@ -147,7 +147,7 @@
 
 
             <div>
-            <a href="blogs/bl19.html">
+            <a href="#">
                 <img src="images/nye.jpg" alt=""/>
                 <h3 style="color:rgb(255, 215, 51)">New Year's Eve 2018 and Resolutions</h3>
                 <span style="color:rgba(255, 255, 255, .6); padding:0">
