--- a/blog_misc.html
+++ b/blog_misc.html
@@ -65,7 +65,7 @@
             <section class="thumbnails">
 
             <div>
-                <a href="blogs/bl19.html">
+                <a href="#">
                     <img src="images/nye.jpg" alt=""/>
                     <h3 style="color:rgb(255, 215, 51)">New Year's Eve 2018 and Resolutions</h3>
                     <span style="color:rgba(255, 255, 255, .6); padding:0">
