--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div display="inline-block">
 					
 						<a target="_blank" href="http://eepurl.com/cVCLq1">
-							<i class="fa fa-thumbs-up"></i>Subscirbe
+							<i class="fa fa-thumbs-up"></i>Subscribe
 						</a>
 	
 						&nbsp;
