--- a/aboutMe.html
+++ b/aboutMe.html
@@ -48,6 +48,35 @@
             </h3>
             <br>
 
+		                <h3>
+                &emsp;&emsp;I'm a <strong>California</strong> native and current Undergraduate studying 
+                <strong>Computer Science</strong> with a minor in <strong>Entrepreneurship and Management</strong>
+                at <strong>Johns Hopkins University</strong>. 
+            </h3>
+
+            <h3>
+                &emsp;&emsp;This summer (2017), I am interning at the <a href="http://www.jhuapl.edu" style="color:rgb(255, 215, 51)">Johns Hopkins University Applied Physics Lab</a> as a part of a startup called <strong>synoPTis</strong>.
+                We are currently working on an <strong>Android</strong> and <strong>iOs</strong> mobile
+                application to streamline patient records and data
+                for the Johns Hopkins Medical Center. This will hopefully allow physicians to get a quick
+                "synopsis" on their patients to conserve time and energy in thier high stress environment.
+                I am working as a developer on the front end portion of the project, however due to the nature
+                of startups (for which I am very grateful), I have been able to get some direct experience with
+                our backend using <strong>Google Protobuf</strong> and <strong>Firebase</strong>.  
+            </h3>
+
+            <h3>
+                &emsp;&emsp;When I'm not working on the synoPTsis app, I work for the Coding School on their 
+                codeConnects project as a Web Developer. (codeConnects is an online 
+                platform that offers one-on-one computer science instruction and mentorship to underrepresented
+                middle and high school students. Pairing each student with a professional software engineer
+                or university student majoring in computer science, students participate in weekly,
+                face-to-face coding lessons using our platforms’ collaborative editing and video chat
+                features.) The Coding School (TCS) is a 501c3 organization that aims to empower the
+                next generation through computer science education. You can find their website
+                <a href="http://the-cs.org/#/" style="color:rgb(255, 215, 51)">here</a>.
+            </h3>
+		    
             <center>
             <a target="_blank" href="https://resume.creddle.io/embed/85wm9ynufhf">
             <button class="button button1">
